Slightly better build system

--- a/queue/Makefile
+++ b/queue/Makefile
@@ -1,21 +1,29 @@
-queue.a: queue.o
-	ar rcs $@ $^
+CC := gcc
+AR := ar
+
+CFLAGS := -Wall -Werror -pedantic -std=c11 -I../tests
+
+lib/queue.a: queue.o
+	mkdir -p lib
+	$(AR) rcs $@ $^
 
 queue.o: queue.c queue.h
-	gcc -c -o $@ $<
+	$(CC) -c $(CFLAGS) -o $@ $<
 
-tests/test_queue.o: tests/test_queue.c tests/test.h queue.h
-	gcc -c -o $@ $<
+
+tests/test_queue.o: tests/test_queue.c queue.h
+	$(CC) -c $(CFLAGS) -o $@ $<
 
 bin/test: tests/test_queue.o queue.o
 	mkdir -p bin
-	gcc -o $@ $^
+	$(CC) -o $@ $^
 
 .PHONY: test
 test: bin/test
 	@$<
 
+
 .PHONY: clean
 clean:
-	rm -f *.o *.a
-	rm -rf bin/
+	rm -f *.o
+	rm -rf bin/ lib/
